alambert    2005/11/07 01:15:30 UTC	(20051107-3611)
  Log:
  expire_check(): we don't want to return here...

  Changes:	Modified:
  +0 -2		trunk/src/node.c (File Modified) 


jilles      2005/11/07 00:04:17 UTC	(20051107-3609)
  Log:
  Change database errors from LG_DEBUG to LG_ERROR.
  

  Changes:	Modified:
  +8 -8		trunk/backend/mysql.c (File Modified) 
  +5 -5		trunk/backend/postgresql.c (File Modified) 


jilles      2005/11/06 23:57:17 UTC	(20051106-3607)
  Log:
  Enable $Id$ expansion.
  

  Changes:	Modified:
  + -		trunk/Makefile.win32  (Property Modified)
  + -		trunk/autoconf/atheme-c.m4  (Property Modified)
  + -		trunk/crypto/posix.c  (Property Modified)
  + -		trunk/dbtool/dbtool.c  (Property Modified)
  + -		trunk/include/xmlrpc.h  (Property Modified)
  + -		trunk/libatheme/event.h  (Property Modified)
  + -		trunk/libatheme/org.atheme.claro.base.string  (Property Modified)
  + -		trunk/libatheme/win32.c  (Property Modified)
  + -		trunk/modules/operserv/modinspect.c  (Property Modified)
  + -		trunk/src/Manifest  (Property Modified)


jilles      2005/11/06 23:52:07 UTC	(20051106-3605)
  Log:
  Add command logging to Global.
  

  Changes:	Modified:
  +3 -0		trunk/modules/global/main.c (File Modified) 


jilles      2005/11/06 23:50:41 UTC	(20051106-3603)
  Log:
  Add +M umode to allow global notices.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/hyperion.c (File Modified) 


jilles      2005/11/06 23:36:34 UTC	(20051106-3601)
  Log:
  Add command logging to operserv.
  Most commands are CMDLOG_ADMIN; commands that only
  request information are CMDLOG_GET; jupe/akill are
  CMDLOG_SET.
  

  Changes:	Modified:
  +6 -0		trunk/modules/operserv/akill.c (File Modified) 
  +2 -0		trunk/modules/operserv/inject.c (File Modified) 
  +2 -0		trunk/modules/operserv/jupe.c (File Modified) 
  +1 -0		trunk/modules/operserv/mode.c (File Modified) 
  +2 -0		trunk/modules/operserv/modinspect.c (File Modified) 